# Gtest_tutorial

./: CMakeLists.txt  README.md
src/: functions.cpp
tests/: test.cpp
